# tracker_ws

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/mpc/: Polynome.h
devel/lib/mpc/: mpc_controller_node
devel/lib/pkgconfig/: joy_stick.pc  mpc.pc  scout_control.pc  scout_description.pc  scout_gazebo_sim.pc  scout_model.pc  tracker_demo.pc
devel/lib/scout_gazebo_sim/: scout_skid_steer_controller
devel/lib/tracker_demo/: tracker_state_machine
devel/share/joy_stick/cmake/: joy_stickConfig.cmake
devel/share/mpc/cmake/: mpc-msg-paths.cmake  mpcConfig.cmake
devel/share/roseus/ros/mpc/: manifest.l
devel/share/scout_control/cmake/: scout_controlConfig.cmake
devel/share/scout_description/cmake/: scout_descriptionConfig.cmake
devel/share/scout_gazebo_sim/cmake/: scout_gazebo_simConfig.cmake
devel/share/scout_model/cmake/: scout_modelConfig.cmake
devel/share/tracker_demo/cmake/: tracker_demo-msg-paths.cmake  tracker_demoConfig.cmake
src/hunter_simulator/hunter2_control/config/: ctrl_ackermann_steering_controller.yaml
src/hunter_simulator/hunter2_gazebo/: CMakeLists.txt  package.xml
src/joy_stick/scripts/: joy_stick_manager.py
src/mpc/: CMakeLists.txt
src/mpc/config/: param.yaml
src/mpc/launch/: test_mpc.launch
src/mpc/scripts/: MPC.py  local_planner.py
src/mpc/src/: mpc.cpp
src/tracker_demo/: CMakeLists.txt  package.xml
src/tracker_demo/config/: scout_multi.rviz
src/tracker_demo/launch/: spawn_scout_env.launch
src/tracker_demo/meshes/: scout_empty.world
src/tracker_demo/src/: tracker_state_machine.cpp
(+20 files in other folders)
